--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -1,9 +1,9 @@
-APP_DISPLAY_NAME = iAPS
+APP_DISPLAY_NAME = iAPS-dev
 APP_VERSION = 2.4.2
 APP_BUILD_NUMBER = 1
 COPYRIGHT_NOTICE =
 DEVELOPER_TEAM = ##TEAM_ID##
-BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS
+BUNDLE_IDENTIFIER = ru.artpancreas.$(DEVELOPMENT_TEAM).FreeAPS-dev
 APP_GROUP_ID = group.com.$(DEVELOPMENT_TEAM).loopkit.LoopGroup
 APP_ICON = pod_colorful
 APP_URL_SCHEME = freeaps-x
